--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -27,12 +28,19 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Sticky footer -->
+
+    <link
+      rel="canonical"
+      href="https://getbootstrap.com/docs/4.0/examples/sticky-footer/"
+    />
   </head>
   <body>
     <header>
       <div class="container nav-container">
         <nav class="p-0 navbar navbar-expand-lg navbar-light bg-light">
-          <h1 class="nav-heading">Mike Gelber</h1>
+          <h1 class="nav-heading font-weight-bold">Mike Gelber</h1>
           <button
             class="navbar-toggler"
             type="button"
@@ -50,7 +58,7 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="#"
+                <a class="nav-link font-weight-bold" href="#"
                   >About <span class="sr-only">(current)</span></a
                 >
               </li>
@@ -65,8 +73,44 @@
         </nav>
       </div>
     </header>
-    <section class="main-container">
-      <div class="container"></div>
-    </section>
+    <main class="main-container" role="main">
+      <div class="container bg-light pb-4">
+        <div class="row">
+          <div class="col-12">
+            <h1 class="main-content-header border-bottom font-weight-bold">
+              About Me
+            </h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <img
+              class="float-left main-item img-fluid"
+              src="../images/head-shot.png"
+              alt="Mike's headshot"
+            />
+            <p class="main-item lead">
+              Thank you for visiting the portfolio homepage of Mike Gelber.
+              Michael is currently a tri-professional man. He's a Product
+              Specialist II at AppNexus, a Student at Colombia Universities
+              Engineering Bootcamp and he's the Bass Guitarist in Take Your
+              Shoes Off. <br /><br />Mike isn't just your ordinary guy. He's
+              done a lot of interesting things... this includes everything from
+              breeding ducks, to working on a dairy farm to teaching classes on
+              advanced financial modeling (which is an art not a science).
+              <br />
+              <br />
+              As this course continues, Mike will continue to grow and expand
+              this portfolio. So, stay posted and keep your eyes peeled!
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="footer mt-auto py-3">
+      <div class="container">
+        <span>Copyright &copy;</span>
+      </div>
+    </footer>
   </body>
 </html>
