--- a/portfolio.html
+++ b/portfolio.html
@@ -75,28 +75,76 @@
     </header>
     <main class="main-container" role="main">
       <div class="container bg-light pb-4">
-        <div class="row"><div class="col-12"><h1 class="main-content-header border-bottom font-weight-bold">
-            Projects</div></div>
         <div class="row">
-          <div class="d-flex align-items-center justify-content-center col-sm-4 col-xs-12">
-              <img
+          <div class="col-12">
+            <h1 class="main-content-header border-bottom font-weight-bold">
+              Projects
+            </h1>
+          </div>
+        </div>
+        <div class="row w-100 mx-sm-3">
+          <div
+            class="d-flex align-items-center justify-content-center mt-5 mt-sm-0 col-sm-4 col-xs-12"
+          >
+            <img
               class="project-image img-fluid"
               src="./images/dog.png"
               alt="Stand in Image"
             />
-            
-            <h5 class="text-white px-5 py-2 bg-dark project-name">Example Project</h5>
-          </div>
-          <div class="d-flex align-items-center justify-content-center col-sm-4 col-xs-12">
-              <img
-              class="project-image img-fluid"
-              src="./images/dog.png"
-              alt="Stand in Image"
-            />
-          
-            <h5 class="text-white px-md-5 px-xs-5 py-2 bg-dark project-name">Example Project</h5>
-          </div>
 
+            <h5
+              class="text-white w-50 px-5 px-sm-4 px-md-5 py-4 py-sm-2 mt-4 mt-sm-1 mt-md-3 mt-lg-4 project-name"
+            >
+              Example Project
+            </h5>
+          </div>
+          <div
+            class="d-flex align-items-center justify-content-center mt-5 mt-sm-0 col-sm-4 col-xs-12"
+          >
+            <img
+              class="project-image img-fluid"
+              src="./images/dog.png"
+              alt="Stand in Image"
+            />
+
+            <h5
+              class="text-white w-50 px-5 px-sm-4 px-md-5 py-4 py-sm-2 mt-4 mt-sm-1 mt-md-3 mt-lg-4 project-name"
+            >
+              Example Project
+            </h5>
+          </div>
+        </div>
+
+        <div class="row w-100 mx-sm-3">
+          <div
+            class="d-flex align-items-center justify-content-center mt-5 col-sm-4 col-xs-12"
+          >
+            <img
+              class="project-image img-fluid"
+              src="./images/dog.png"
+              alt="Stand in Image"
+            />
+
+            <h5
+              class="text-white w-50 px-5 px-sm-4 px-md-5 py-4 py-sm-2 mt-4 mt-sm-1 mt-md-3 mt-lg-4 project-name"
+            >
+              Example Project
+            </h5>
+          </div>
+          <div
+            class="d-flex align-items-center justify-content-center mt-5 col-sm-4 col-xs-12"
+          >
+            <img
+              class="project-image img-fluid"
+              src="./images/dog.png"
+              alt="Stand in Image"
+            />
+
+            <h5
+              class="text-white w-50 px-5 px-sm-4 px-md-5 py-4 py-sm-2 mt-4 mt-sm-1 mt-md-3 mt-lg-4 project-name"
+            >
+              Example Project
+            </h5>
           </div>
         </div>
       </div>
