--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
         </nav>
       </div>
     </header>
-    <main class="main-container" role="main">
+    <main class="main-container py-5" role="main">
       <div class="container bg-light pb-4">
         <div class="row">
           <div class="col-12">
-            <h1 class="main-content-header border-bottom font-weight-bold">
+            <h1 class="main-content-header mt-0 border-bottom font-weight-bold">
               About Me
             </h1>
           </div>
