--- a/portfolio.html
+++ b/portfolio.html
@@ -58,12 +58,12 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="./index.html"
-                  >About <span class="sr-only">(current)</span></a
-                >
+                <a class="nav-link" href="./index.html">About</a>
               </li>
-              <li class="nav-item Active">
-                <a class="nav-link" href="./portfolio.html">Portfolio</a>
+              <li class="nav-item active">
+                <a class="nav-link" href="./portfolio.html"
+                  >Portfolio <span class="sr-only">(current)</span></a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./contact.html">Contact</a>
@@ -73,11 +73,11 @@
         </nav>
       </div>
     </header>
-    <main class="main-container" role="main">
+    <main class="main-container py-5" role="main">
       <div class="container bg-light pb-4">
         <div class="row">
           <div class="col-12">
-            <h1 class="main-content-header border-bottom font-weight-bold">
+            <h1 class="main-content-header mt-0 border-bottom font-weight-bold">
               Projects
             </h1>
           </div>
@@ -131,6 +131,23 @@
               Example Project
             </h5>
           </div>
+          <div
+            class="d-flex align-items-center justify-content-center mt-5 col-sm-4 col-xs-12"
+          >
+            <img
+              class="project-image img-fluid"
+              src="./images/dog.png"
+              alt="Stand in Image"
+            />
+
+            <h5
+              class="text-white w-50 px-5 px-sm-4 px-md-5 py-4 py-sm-2 mt-4 mt-sm-1 mt-md-3 mt-lg-4 project-name"
+            >
+              Example Project
+            </h5>
+          </div>
+        </div>
+        <div class="row w-100 mx-sm-3">
           <div
             class="d-flex align-items-center justify-content-center mt-5 col-sm-4 col-xs-12"
           >
