--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,9 @@
   <body>
     <header>
       <div class="container nav-container">
-        <nav class="p-0 navbar navbar-expand-lg navbar-light bg-light">
+        <nav
+          class="p-0 navbar container navbar-expand-lg navbar-light bg-light"
+        >
           <h1 class="nav-heading font-weight-bold">Mike Gelber</h1>
           <button
             class="navbar-toggler"
@@ -86,7 +88,7 @@
         </div>
         <div class="mx-sm-4 row w-100">
           <form class="w-75">
-            <div class="form-group">
+            <div class="form-group w-50">
               <label for="exampleInputEmail1">Name</label>
               <input
                 type="name"
@@ -96,7 +98,7 @@
                 placeholder="Paul Ballas"
               />
             </div>
-            <div class="form-group">
+            <div class="form-group w-50">
               <label for="exampleInputEmail1">Email</label>
               <input
                 type="name"
