--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- Probelms: 
+1. The project names on the portfolios page 
+2. Sticky footer -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -39,7 +43,9 @@
   <body>
     <header>
       <div class="container nav-container">
-        <nav class="p-0 navbar navbar-expand-lg navbar-light bg-light">
+        <nav
+          class="p-0 navbar container navbar-expand-lg navbar-light bg-light"
+        >
           <h1 class="nav-heading font-weight-bold">Mike Gelber</h1>
           <button
             class="navbar-toggler"
