--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,9 @@
   <body>
     <header>
       <div class="container nav-container">
-        <nav class="p-0 navbar navbar-expand-lg navbar-light bg-light">
+        <nav
+          class="p-0 navbar container navbar-expand-lg navbar-light bg-light"
+        >
           <h1 class="nav-heading font-weight-bold">Mike Gelber</h1>
           <button
             class="navbar-toggler"
