Made a small update to the header on Contact page

--- a/contact.html
+++ b/contact.html
@@ -78,11 +78,9 @@
     <main class="main-container py-5" role="main">
       <div class="container bg-light pb-4">
         <div class="row">
-          <div class="col-12 px-0 px-sm-4">
-            <h1
-              class="main-content-header mt-0 mx-0 px-sm-4 border-bottom font-weight-bold"
-            >
-              About Me
+          <div class="col-12">
+            <h1 class="main-content-header mt-0 border-bottom font-weight-bold">
+              Contact
             </h1>
           </div>
         </div>
