--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                 <a class="nav-link" href="./portfolio.html">Portfolio</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="./contact.html"
+                <a class="nav-link font-weight-bold" href="./contact.html"
                   >Contact <span class="sr-only">(current)</span></a
                 >
               </li>
