--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
                 <a class="nav-link" href="./index.html">About</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="./portfolio.html"
+                <a class="nav-link font-weight-bold" href="./portfolio.html"
                   >Portfolio <span class="sr-only">(current)</span></a
                 >
               </li>
