Fixed image links by reducing .. to .

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!-- Probelms: 
 1. The project names on the portfolios page 
-2. Sticky footer -->
+2. Sticky footer 
+3. The navbar hamburger thing doesn't work
+4. In gitpages mode, the images aren't appearing-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -92,7 +94,7 @@
           <div class="col-12">
             <img
               class="float-left main-item img-fluid"
-              src="../images/head-shot.png"
+              src="./images/head-shot.png"
               alt="Mike's headshot"
             />
             <p class="main-item lead">
