Fixed the navbar so that the hamburger menu works

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     <header>
       <div class="container nav-container">
         <nav
-          class="p-0 navbar container navbar-expand-lg navbar-light bg-light"
+          class="p-0 navbar container navbar-expand-lg navbar-light bg-light d-flex justify-content-end"
         >
           <h1 class="nav-heading font-weight-bold">Mike Gelber</h1>
           <button
@@ -55,7 +55,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div
-            class="collapse navbar-collapse d-flex justify-content-end"
+            class="collapse navbar-collapse d-lg-flex justify-content-end"
             id="navbarNav"
           >
             <ul class="navbar-nav">
