--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!-- Probelms: 
 1. The project names on the portfolios page 
-2. Sticky footer 
-3. The navbar hamburger thing doesn't work
+
 4. In gitpages mode, the images aren't appearing-->
 
 <!DOCTYPE html>
@@ -46,7 +45,7 @@
     <header>
       <div class="container nav-container">
         <nav
-          class="p-0 navbar container navbar-expand-lg navbar-light bg-light"
+          class="p-0 navbar container navbar-expand-lg navbar-light bg-light d-flex justify-content-end"
         >
           <h1 class="nav-heading font-weight-bold">Mike Gelber</h1>
           <button
@@ -61,7 +60,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div
-            class="collapse navbar-collapse d-flex justify-content-end"
+            class="collapse navbar-collapse d-lg-flex justify-content-end"
             id="navbarNav"
           >
             <ul class="navbar-nav">
